--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@
     padding: 0;
 }
 
+body {
+    background-color: #f6f8f9;
+}
+
+header {
+    background-color: white;
+}
+
+nav {
+    padding: 1rem;
+    border-bottom: 1px solid black;
+}
+
 .logo {
     margin: 1rem;
 }
@@ -14,3 +27,24 @@
     vertical-align: top;
     padding-top: 1rem;
 }
+
+.nav-text {
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+}
+
+.nav-text.blue {
+    background-color: #4596fa;
+}
+
+.nav-text.white {
+    background-color: white;
+    color: grey;
+}
+
+/* .container {
+    background-color: white;
+    width: 1200px;
+    height: 1000px;
+} */
